--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -83,7 +83,7 @@ jobs:
     - name: Build, tag, and push docker image to Amazon ECR
       env:
         REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        REPOSITORY: ${{ variables.MY_ECR_REPO_NAME}}
+        REPOSITORY: ${{ env.MY_ECR_REPO_NAME}}
         IMAGE_TAG: ${{ github.sha }}
       run: |
         docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
