fixed file path

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -86,7 +86,7 @@ jobs:
         REPOSITORY: ${{ vars.MY_ECR_REPO_NAME}}
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -f ../../app/Dockerfile
+        docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -f ../../app/Dockerfile .
         docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
