--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -98,7 +98,10 @@ jobs:
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       working-directory: terraform
-      run: terraform init
+      env:
+        AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKER_NAME }}
+        AWS_BUCKET_KEY_NAME: ${{ secrets.AWS_BUCKET_KEY_NAME }}
+      run: terraform init --backend-config="bucket=${AWS_BUCKET_NAME}" --backend-config="key=${AWS_BUCKET_KEY_NAME}"
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
