--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -99,7 +99,7 @@ jobs:
     - name: Terraform Init
       working-directory: terraform
       env:
-        AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKER_NAME }}
+        AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
         AWS_BUCKET_KEY_NAME: ${{ secrets.AWS_BUCKET_KEY_NAME }}
       run: terraform init --backend-config="bucket=${AWS_BUCKET_NAME}" --backend-config="key=${AWS_BUCKET_KEY_NAME}"
 
