--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -106,7 +106,12 @@ jobs:
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
       working-directory: terraform
-      run: terraform fmt -check
+      run: terraform fmt -check -recursive
+
+    - name: Terraform Format Fix (optional)
+      if: failure()
+      working-directory: terraform
+      run: terraform fmt -recursive
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
